# Production_RAG_System

./: .gitignore  README.md  Results.md  docker_compose.yml  pyproject.toml
app/: Dockerfile  config.py  main.py  models.py
app/agents/: adaptive_router.py  crag.py
app/agents/tools/: vector_search.py  web_search.py
app/prompts/: __init__.py  grading.py
app/retrieval/: filters.py  hybrid_retrieval.py  reranker.py
app/routes/: health.py  query.py  search.py
app/security/: content_filter.py  input_guard.py  output_guard.py
app/services/: conversation.py  document_grader.py  query_decomposer.py  query_router.py  rag_pipeline.py  semantic_cache.py
eval/: run.py
eval/dataset/: generation_eval.json  retrieval_eval.json
eval/metrics/: llm_judge.py  retrieval.py
eval/runners/: ablation_runner.py  e2e_runner.py  retrieval_runner.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  CitationList.tsx  EmptyState.tsx  Header.tsx  Sidebar.tsx  StatusIndicator.tsx
frontend/src/hooks/: useConversation.ts  (+1 more)
pipeline/: chunker.py  deduplicator.py  embedder.py  format_detector.py  indexer.py  ingest.py  preprocessor.py
pipeline/extractors/: base.py  docx_extractor.py  html_extractor.py  image_extractor.py  pdf_extractor.py  text_extractor.py
prompts/: __init__.py  templates.py
routes/: query.py
services/: MCP.txt  conversation.py  document_grader.py  query_decomposer.py  query_router.py
(+7 files in other folders)
